--- a/16-tmp/Makefile
+++ b/16-tmp/Makefile
@@ -19,7 +19,7 @@ kernel.elf: boot/kernel_entry.o ${OBJ}
 	ld -melf_i386 -o $@ -Ttext 0x1000 $^
 
 run: os-image.bin
-	qemu-system-x86_64 -fda os-image.bin
+	qemu-system-x86_64 -m 128M -fda os-image.bin
 
 debug: os-image.bin kernel.elf
 	qemu-system-x86_64 -s -S -fda os-image.bin & 
