--- a/JamesM-os/Makefile
+++ b/JamesM-os/Makefile
@@ -2,7 +2,7 @@ update:
 	./update_image.sh
 	
 qemu:	
-	qemu-system-i386 -nographic  -serial mon:stdio  -fda floppy.img
+	qemu-system-i386  -fda floppy.img
 
 # For -nographic just enter: 先按ctrl+A 然后松开，再按x或者c
 # Ctrl-A X
