--- a/JamesM-os/src/Makefile
+++ b/JamesM-os/src/Makefile
@@ -3,7 +3,7 @@
 # The only one that needs changing is the assembler 
 # rule, as we use nasm instead of GNU as.
 
-SOURCES=boot.o main.o
+SOURCES=boot.o main.o monitor.o common.o
 
 CFLAGS=-nostdlib -nostdinc -fno-builtin -m32 -no-pie -fno-pic 
 LDFLAGS=-Tlink.ld -m elf_i386
